change on style so it can be viewed from ghpages

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Hanged Man</title>
     <meta name="author" content="Arnau Costa Pont" />
     <meta name="author" content="Lluis Vinent Juanico" />
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="assets/images/hangman_8.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script defer src="https://u1978882.github.io/QuerrySelector/QuerrySelector.js"></script>
+    <script defer src="js/QuerrySelector.js"></script>
     <script defer src="js/functions.js"></script>
     <script defer src="js/main.js"></script>
 
